infra/k8s/django/001-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  selector:
    matchLabels:
      app: django
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: toresbe/fk-django:latest
        ports:
          - name: web
            containerPort: 8080
        volumeMounts:
        - mountPath: /srv/collected_staticfiles
          name: static-files
        lifecycle:
          postStart:
            exec:
              command: ["./manage.py", "collectstatic"]
      - name: nginx
        image: nginx
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          readOnly: true
          name: nginx-conf
        - mountPath: /usr/share/nginx/html
          name: static-files
        ports:
          - name: web
            containerPort: 80
      volumes:
      - name: static-files
        emptyDir: {}
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: site.conf
              path: site.conf
