infra/k8s/django/002-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: django
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - protocol: TCP
      port: 8002
      name: django-web
