infra/k8s/django/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  selector:
    matchLabels:
      app: django
  minReadySeconds: 5
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: frikanalen/django-backend:master
        imagePullPolicy: Always
        ports:
          - name: django-web
            containerPort: 8080
        volumeMounts:
        - mountPath: /srv/collected_staticfiles
          name: static-files
      - name: nginx
        image: nginx
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          readOnly: true
          name: nginx-conf
        - mountPath: /usr/share/nginx/html
          name: static-files
        ports:
          - name: django-web
            containerPort: 80
      volumes:
      - name: static-files
        emptyDir: {}
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: site.conf
              path: site.conf
---
kind: Service
apiVersion: v1
metadata:
  name: django
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - protocol: TCP
      port: 80
      name: django-web
